# maxim-py

./: .gitignore  Dockerfile  Makefile  README.md  livekit.toml  mypy.ini  project.json  publish.sh  pyproject.toml  setup.py  uv-publish.py
.github/workflows/: tests.yml
.nx/workspace-data/: file-map.json  nx_files.nxt
cookbook/: agno_agent.py
maxim/: __init__.py  filter_objects.py  maxim.py  scribe.py
maxim/apis/: maxim_apis.py
maxim/cache/: __init__.py  cache.py  inMemory.py
maxim/dataset/: dataset.py
maxim/decorators/: generation.py
maxim/deprecated_tests/: test_logger_langchain_02x.py
maxim/logger/: logger.py  utils.py  writer.py
maxim/models/: __init__.py  dataset.py  evaluator.py  prompt.py  test_run.py
maxim/runnable/: prompt.py
maxim/test_runs/: run_utils.py  test_run_builder.py
maxim/tests/: agent_demo.py  fallback_test.py  livekit_token.py  mock_writer.py  push_to_talk_web_client.html  test_add_dataset_entries.py  test_add_dataset_entries_comprehensive.py  test_add_dataset_entries_integration.py  test_agno.py  test_anthropic.py  test_api_handler.py  test_connection_retry_logic.py  test_crewai.py  test_decorators.py  test_fireworks.py  test_gemini.py  test_groq.py  test_langgraph.py  test_langgraph_1.ipynb  test_langgraph_2.py  test_langgraph_decorators.ipynb  test_langgraph_decorators.py  test_litellm.py  test_livekit.py  test_livekit_interview_agent.py  test_livekit_pts.py  test_livekit_ptt.py  test_livekit_push_to_talk.py  test_livekit_push_to_talk_client.py  test_livekit_push_to_talk_copy.py  test_logger.py  (+26 more)
scripts/: split_docs.py
(+99 files in other folders)
