[project]
name = "maxim-py"
version = "0.1.0"
description = "Maxim Python Library"
readme = "README.md"
requires-python = ">=3.9.20, <3.10"
dependencies = [
    "crewai>=0.5.0",
    "filetype>=1.2.0",
    "livekit>=1.0.8",
    "livekit-agents[openai]>=1.0.22",
    "livekit-api>=1.0.2",
    "requests>=2.32.3",
    "typing-extensions>=4.13.2",
    "urllib3>=2.4.0",
]
